feat: configurações iniciais, organizações dos pacotes

--- a/app/ui/src/styles/pallete-color.scss
+++ b/app/ui/src/styles/pallete-color.scss
@@ -1,17 +1,12 @@
-@use '~@angular/material' as mat;
-@use '~@angular/material/theming' as theming;
 
-@include mat.core();
-
-$brazona-branco: (background: #F5F5F5);
-$brazona-cinza: (background: #4B4B4B);
-$brazona-preto: (background: #212121);
-$brazona-verde-escuro: (background: #114303);
-$brazona-verde-claro: (background: #29FF00);
-$brazona-amarelo-escuro: (background: #212100);
-$brazona-amarelo-claro: (background: #EAFE06);
-$brazona-amarelo-gradiente: (
-    border: 3px solid
-    border-image-source: linear-gradient(180deg, #EAFE06 0%, #29FF00 100%));
-
-
+$brazona-branco:  #F5F5F5;
+$brazona-cinza: #4B4B4B;
+$brazona-preto: #212121;
+$brazona-verde-escuro-transparente: rgba(17, 67, 3, 0.6);
+$brazona-verde-escuro: #114303;
+$brazona-verde-claro: #29FF00;
+$brazona-amarelo-escuro: #212100;
+$brazona-amarelo-claro: #EAFE06;
+$brazona-amarelo-gradiente: linear-gradient(180deg, #EAFE06 0%, #29FF00 100%);
+$brazona-verde-amarelo-gradiente: linear-gradient(to right, #EAFE06 0%, #29FF00 100%);
+$brazona-verde-amarelo-gradiente-left: linear-gradient(to right, #EAFE06 0%, #29FF00 100%);
