--- a/app/ui/src/styles/style.scss
+++ b/app/ui/src/styles/style.scss
@@ -1,4 +1,8 @@
 @import "pallete-color";
+// import bootstrap css framework
+@import url('../../node_modules/bootstrap/dist/css/bootstrap.min.css');
+// import materialize css framework
+@import url('../../node_modules/materialize-css/dist/css/materialize.min.css');
 
 html,
 body {
