--- a/app/ui/src/app/pages/recuperacao/recuperacao.component.html
+++ b/app/ui/src/app/pages/recuperacao/recuperacao.component.html
@@ -1,2 +1,18 @@
-<p>recuperacao works!</p>
-<a routerLink="/acesso/autenticacao">Autenticação</a>
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+<input class="form-control" type="text" value="Readonly input here..." aria-label="readonly input example" readonly>
+
+<div class="form-floating mb-3">
+  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+  <label for="floatingInput">Email address</label>
+</div>
+<div class="form-floating">
+  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+  <label for="floatingPassword">Password</label>
+</div>
