feat: implementado html dos componentes da pagina de autenticacao

--- a/app/ui/src/app/pages/autenticacao/autenticacao.component.html
+++ b/app/ui/src/app/pages/autenticacao/autenticacao.component.html
@@ -7,12 +7,11 @@
                 <div class="formulario-cabecalho" fxFlex="40" fxFill fxLayoutAlign="center center" ></div>
                 <div class="formulario-campos" fxFlex="35" fxFill fxLayoutAlign="space-between none" fxLayout="column" >
                     <div fxFlex="20" fxFill fxLayoutAlign="center center"></div>
-                    <app-username fxFlex="20" fxFill fxLayoutAlign="space-between center" fxFill></app-username><br/>
-                    <app-password fxFlex="20" fxFill fxLayoutAlign="space-between center" fxFill></app-password><br/>
-                    <app-bt-access fxFlex="20" fxFill fxLayoutAlign="center center"></app-bt-access>
-                    <div fxFlex="20" fxFill fxLayoutAlign="center center">
-                        <a href="www.google.com" class="link-primary" routerLink="/recuperacao">Esqueceu sua senha?</a>
-                        <!-- <label>Esqueceu sua senha?</label> -->
+                    <app-username fxFlex="30" fxFill fxLayoutAlign="space-between center" fxFill></app-username><br/>
+                    <app-password fxFlex="30" fxFill fxLayoutAlign="space-between center" fxFill></app-password><br/>
+                    <app-bt-access fxFlex="25" fxFill fxLayoutAlign="center center"></app-bt-access><br/>
+                    <div fxFlex="20" fxFill fxLayoutAlign="end end">
+                        <a class="link-recuperacao" routerLink="/recuperacao">Esqueceu sua senha?</a>
                     </div>
                 </div>
                 <div class="formulario-rodape" fxFlex="25" fxFill fxLayoutAlign="center center" ></div>
