--- a/app/ui/src/app/pages/components/buttons/access/access.component.html
+++ b/app/ui/src/app/pages/components/buttons/access/access.component.html
@@ -1,4 +1,5 @@
 <!-- <button type="button" class="btn btn-primary btn-lg">Large button</button> -->
-<button class="btn-access btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-</button>
+<div class="container-btn-access">
+  <button class="btn-access btn waves-effect waves-light" type="submit" name="action">ENTRAR
+  </button>
+</div>
