--- a/app/ui/src/app/pages/autenticacao/autenticacao.component.scss
+++ b/app/ui/src/app/pages/autenticacao/autenticacao.component.scss
@@ -27,4 +27,12 @@
     margin: 2px;
 }
 
-
+.link-recuperacao{
+    color: font.$brazona-font-color;
+    font-family: font.$brazona-font-family;
+    font-weight: font.$brazona-font-weight;
+    font-size: font.$brazona-font-size;
+    font-style: font.$brazona-font-style;
+    text-decoration: none;
+    position: relative;
+}
