--- a/app/ui/src/app/pages/components/fields/password/password.component.scss
+++ b/app/ui/src/app/pages/components/fields/password/password.component.scss
@@ -15,3 +15,6 @@
 .floating-field-password {
     color: font.$brazona-font-color;
 }
+.icon-password:hover{
+    color: font.$brazona-font-color-hover;
+}
