--- a/app/ui/src/styles/typography.scss
+++ b/app/ui/src/styles/typography.scss
@@ -18,3 +18,9 @@ $brazona-letter-spacing: var(--russo-one-letter-spacing);
 $brazona-line-height: var(--russo-one-line-height);
 $brazona-white-space: nowrap;
 $brazona-font-style: var(--russo-one-font-style);
+$brazona-font-size-hover: 22px;
+$brazona-font-color-hover: paleta.$brazona-verde-claro;
+$brazona-font-decoration-hover: underline;
+$brazona-font-weight-hover: bolder;
+
+
