--- a/app/ui/src/app/pages/components/fields/password/password.component.html
+++ b/app/ui/src/app/pages/components/fields/password/password.component.html
@@ -2,9 +2,9 @@
     <input type="password" class="form-control field-password" id="floatingPassword" placeholder="Password">
     <label class="label-field-password" for="floatingPassword">Password</label>
     <div *ngIf="passVisibility; else templateName">
-        <span (click)="showPass()" class="material-icons">visibility</span>
+        <span (click)="showPass()" class="material-icons icon-password">visibility</span>
     </div>
     <ng-template #templateName>
-        <span (click)="showPass()" class="material-icons">visibility_off</span>
+        <span (click)="showPass()" class="material-icons icon-password">visibility_off</span>
     </ng-template>
 </div>
