--- a/app/ui/src/app/pages/components/fields/password/password.component.html
+++ b/app/ui/src/app/pages/components/fields/password/password.component.html
@@ -1,5 +1,12 @@
 <div class="form-floating floating-field-password" fxFlex="100" fxFill fxLayoutAlign="center center">
-    <input type="password" class="form-control field-password" id="floatingPassword" placeholder="Password">
+    <input 
+        type="password" 
+        class="form-control field-password" 
+        id="floatingPassword" 
+        placeholder="Password" 
+        formControlName="password"
+        (change)="atribuiPassword($event)"
+    >
     <label class="label-field-password" for="floatingPassword">Password</label>
     <div *ngIf="passVisibility; else templateName">
         <span (click)="showPass()" class="material-icons icon-password">visibility</span>
