feat: incluisão do modal mensagem

--- a/app/ui/src/styles/style.scss
+++ b/app/ui/src/styles/style.scss
@@ -3,7 +3,8 @@
 @import url('../../node_modules/bootstrap/dist/css/bootstrap.min.css');
 // import materialize css framework
 @import url('../../node_modules/materialize-css/dist/css/materialize.min.css');
-
+// import materialize ngx toast
+@import url('../../node_modules/ngx-toastr/toastr.css');
 html,
 body {
     height: 100%;
