feat: Front end - Codificação do Designer Gráfico

--- a/app/ui/src/app/pages/autorizacao/autorizacao.component.html
+++ b/app/ui/src/app/pages/autorizacao/autorizacao.component.html
@@ -1,1 +1,8 @@
-<p>autorizacao works!</p>
+@if(loading$ | async) {
+  <app-background-loading></app-background-loading>
+  <div class="spinner-container">
+    <div class="progress">
+      <div class="indeterminate"></div>
+    </div>
+  </div>
+}
