feat: Front end - Codificação do Designer Gráfico

--- a/app/ui/src/app/pages/autorizacao/autorizacao.component.scss
+++ b/app/ui/src/app/pages/autorizacao/autorizacao.component.scss
@@ -9,8 +9,7 @@
   align-items: center;
   top: 0;
   left: 0;
-  //background: rgba(17, 67, 3, 0.40) url(../../../assets/imagens/background-pagina-1024x768.png) no-repeat;
-  //background: rgba(17, 67, 3, 0.20);
+  background: rgba(17, 67, 3, 0.50);
   z-index: 2000;
 }
 .progress{
