--- a/app/ui/src/app/pages/recuperacao/recuperacao.component.html
+++ b/app/ui/src/app/pages/recuperacao/recuperacao.component.html
@@ -1,18 +1,17 @@
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
-<input class="form-control" type="text" value="Readonly input here..." aria-label="readonly input example" readonly>
-
-<div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">Email address</label>
-</div>
-<div class="form-floating">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">Password</label>
+<div class="background" fxLayout="row" >
+  <app-background-page></app-background-page>
+  <form [formGroup]="formularioRecuperacao" class="background-left" fxFlex="30" fxLayout="column" (ngSubmit)="recuperacao()">
+    <app-background-form></app-background-form>
+    <div class="formulario" fxFlex="100" fxLayout="column" fxLayoutAlign="center center" >
+      <div class="formulario-conteudo" fxFlex="100" fxLayout="column" fxLayoutAlign="center center" >
+        <div class="formulario-cabecalho" fxFlex="40" fxFill fxLayoutAlign="center center" ></div>
+        <div class="formulario-campos" fxFlex="35" fxFill fxLayoutAlign="space-between none" fxLayout="column" >
+          <router-outlet></router-outlet>
+        </div>
+        <div class="formulario-rodape" fxFlex="25" fxFill fxLayoutAlign="center center" ></div>
+      </div>
+    </div>
+  </form>
+  <div class="background-rigth" fxFlex="67" fxFill >
+  </div>
 </div>
