feat: Front end - o campo repitir a senha deve ter olho magico

--- a/app/ui/src/app/pages/components/fields/new_password/new-password.field.component.html
+++ b/app/ui/src/app/pages/components/fields/new_password/new-password.field.component.html
@@ -1,7 +1,7 @@
 <div class="form-floating floating-field-new-password" fxFlex="100" fxFill fxLayoutAlign="center center">
     <input
         type="password"
-        class="form-control field-password"
+        class="form-control field-new-password"
         id="floatingPassword"
         placeholder="Password"
         formControlName="new-password"
