feat: Front end - melhoria na nomeclatura dos componentes da pagina recuperação / atualização

--- a/app/ui/src/app/pages/components/fields/repeat_new_password/repeat-new-password.field.component.html
+++ b/app/ui/src/app/pages/components/fields/repeat_new_password/repeat-new-password.field.component.html
@@ -1,13 +1,13 @@
-<div class="form-floating floating-field-new-password" fxFlex="100" fxFill fxLayoutAlign="center center">
+<div class="form-floating floating-field-repeat-new-password" fxFlex="100" fxFill fxLayoutAlign="center center">
     <input
         type="password"
-        class="form-control field-new-password"
+        class="form-control field-repeat-new-password"
         id="floatingPassword"
         placeholder="Password"
         formControlName="new-password"
-        (change)="atribuiNewPassword($event)"
+        (change)="atribuiRepeatNewPassword($event)"
     >
-    <label class="label-field-new-password" for="floatingPassword">Nova Senha</label>
+    <label class="label-field-repeat-new-password" for="floatingPassword">Repita Nova Senha</label>
     <div *ngIf="passVisibility; else templateName">
         <span (click)="showPass()" class="material-icons icon-password">visibility</span>
     </div>
