--- a/app/ui/src/app/pages/recuperacao/atualizacao/atualizacao.component.scss
+++ b/app/ui/src/app/pages/recuperacao/atualizacao/atualizacao.component.scss
@@ -20,3 +20,27 @@
   color: red;
   position: relative;
 }
+
+.btn-new-password {
+  color: font.$brazona-font-color;
+  font-family: font.$brazona-font-family;
+  font-weight: font.$brazona-font-weight;
+  font-size: font.$brazona-font-size;
+  font-style: font.$brazona-font-style;
+  width: 100%;
+  height: 100%;
+  background-color: paleta.$brazona-verde-escuro;
+  border-radius: 5px;
+}
+.btn-new-password:hover{
+  color: font.$brazona-font-color-hover;
+}
+.container-btn-new-password{
+  background-image: paleta.$brazona-amarelo-gradiente;
+  //background-image: linear-gradient(to right, transparent, black, transparent);
+  width: 100%;
+  height: 100%;
+  padding: 3px;
+  border-radius: 5px;
+
+}
