feat: Melhorar html email esqueceu e atualizou a senha

--- a/app/ui/src/app/pages/recuperacao/email/email.component.scss
+++ b/app/ui/src/app/pages/recuperacao/email/email.component.scss
@@ -1,5 +1,5 @@
-@use "typography.scss" as font;
-@use "pallete-color" as paleta;
+@use "../../../../styles/typography" as font;
+@use "../../../../styles/pallete-color" as paleta;
 
 .formulario-campos{
   width: 100%;
