--- a/app/ui/src/app/pages/autorizacao/autorizacao.component.scss
+++ b/app/ui/src/app/pages/autorizacao/autorizacao.component.scss
@@ -13,8 +13,9 @@
   z-index: 2000;
 }
 .progress{
-  width: 100%;
-  border: 2px solid paleta.$brazona-verde-claro;
+  width: 50%;
+  height: 1%;
+  border: 1px solid paleta.$brazona-verde-claro;
   border-radius: 5px;
   padding: 0.5rem;
   background-color: transparent;
