--- a/app/ui/src/app/pages/components/spinner/loading/loading.component.scss
+++ b/app/ui/src/app/pages/components/spinner/loading/loading.component.scss
@@ -7,7 +7,8 @@
   align-items: center;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.32);
+  //background: rgba(0, 0, 0, 0.32);
+  background: black;
   z-index: 2000;
 }
 .progress{
